chandeliers-lus/tests/warn/dead_code/never-read.stderr
error: unused variable: `z__lus_local`
 --> tests/warn/dead_code/never-read.rs:7:16
  |
7 |     let y = x; z = 1; tel;
  |                ^ help: if this is intentional, prefix it with an underscore: `_z__lus_local`
  |
note: the lint level is defined here
 --> tests/warn/dead_code/never-read.rs:2:9
  |
2 | #![deny(warnings)]
  |         ^^^^^^^^
  = note: `#[deny(unused_variables)]` implied by `#[deny(warnings)]`
